<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:defaultValue="false"
            android:key="rememberPassword"
            android:summary="@string/descPrefRememberPass"
            android:title="@string/rememberPssword"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="preferSD"
            android:summary="@string/descPreferSDCard"
            android:title="@string/preferSDCard"/>

    <PreferenceCategory android:title="@string/advanced">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="useCache"
                android:summary="@string/descPrefUseCache"
                android:title="@string/useCache"/>

        <CheckBoxPreference
                android:defaultValue="true"
                android:key="isFirstTime"
                android:title="@string/isFirstTime"/>

        <EditTextPreference
                android:defaultValue="http://rlavila-001-site1.hostbuddy.com?r=site"
                android:key="serverAddress"
                android:title="@string/serverAddress"/>
                <!--android:defaultValue="http://rlavila-001-site1.hostbuddy.com?r=site"-->
    </PreferenceCategory>

</PreferenceScreen>