<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".controllers.Register">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_above="@+id/loginPassword"
            android:layout_alignStart="@+id/loginUser" android:id="@+id/relative1"

            >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/cclouds_register_right"
                android:layout_marginTop="21dp"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>

        <RelativeLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView">
            <EditText
                    android:id="@+id/registerUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:hint="@string/userEmail"
                    android:text="rlavila@nauta.cu"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"/>

            <EditText
                    android:id="@+id/registerUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/registerUserEmail"
                    android:hint="@string/userPassword"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Entrar"
                    android:text="123"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="20sp" android:layout_alignStart="@+id/registerUserEmail"
                    android:layout_alignEnd="@+id/registerUserEmail"/>

            <Button
                    android:id="@+id/userRegister"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="100dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/doRegister"
                    android:layout_below="@+id/registerUserPassword"
                    android:background="@android:color/holo_blue_dark"
                    android:layout_centerVertical="true"
                    android:layout_alignStart="@+id/registerUserPassword"
                    android:layout_alignEnd="@+id/registerUserPassword"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:text="123"
                    android:hint="@string/userPasswordConfirm"
                    android:id="@+id/userPasswordConfirmation"
                    android:layout_below="@+id/registerUserPassword"
                    android:layout_alignStart="@+id/registerUserPassword"
                    android:layout_alignEnd="@+id/registerUserPassword"
                    android:textSize="20sp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acceptTermsAndConditions"
                    android:id="@+id/checkBox"
                    android:layout_below="@+id/userPasswordConfirmation"
                    android:layout_alignStart="@+id/userRegister"/>

        </RelativeLayout>
    </RelativeLayout>

</merge>